--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </form>
         <div class="col-md-offset-1 col-sm-offset-1 col-xs-offset-1 col-md-10 col-sm-10 col-xs-10">
-            <button class="btn btn-success btn-block" id="btn" onclick="addDevice()">
+            <button class="btn btn-success btn-block" id="btn">
                 Add the device
             </button>
         </div>
